# mathdocs

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  out.md  pyproject.toml  pyrightconfig.json  python-rendering-extension.md
.github/workflows/: ci.yml  release.yml
crates/mathdocs_ast/: Cargo.toml
crates/mathdocs_ast/src/: lib.rs
crates/mathdocs_cli/: Cargo.toml
crates/mathdocs_cli/src/: main.rs
crates/mathdocs_ir/: Cargo.toml
crates/mathdocs_ir/src/: lib.rs
crates/mathdocs_latex/: Cargo.toml
crates/mathdocs_latex/src/: lib.rs
crates/mathdocs_lsp/: Cargo.toml
crates/mathdocs_lsp/src/: main.rs
crates/mathdocs_markdown/: Cargo.toml
crates/mathdocs_markdown/src/: lib.rs
crates/mathdocs_markdown/tests/: golden.rs
crates/mathdocs_metadata/: Cargo.toml
crates/mathdocs_metadata/src/: lib.rs
crates/mathrender_ast/: Cargo.toml
crates/mathrender_ast/src/: lib.rs
crates/mathrender_cli/: Cargo.toml
crates/mathrender_cli/src/: main.rs
crates/mathrender_ir/: Cargo.toml
crates/mathrender_ir/src/: lib.rs
crates/mathrender_latex/: Cargo.toml
crates/mathrender_latex/src/: lib.rs
crates/mathrender_lsp/: Cargo.toml
crates/mathrender_lsp/src/: main.rs
crates/mathrender_markdown/: Cargo.toml
crates/mathrender_markdown/src/: lib.rs
crates/mathrender_markdown/tests/: golden.rs
crates/mathrender_metadata/: Cargo.toml
crates/mathrender_metadata/src/: lib.rs
editors/vscode/: .vscodeignore  LICENSE.txt  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: copy-katex-assets.js
editors/vscode/src/: extension.ts
examples/: electrodynamics.py  feature_showcase.py  generated_plot.py  gpt_transformer.py  linear_model.py  sidecar_demo.mathdocs.toml
examples/electrodynamics/: electrodynamics.md
examples/feature_showcase/: feature_showcase.md
examples/generated_plot/: generated_plot.md  generated_plot.py
examples/gpt_transformer/: gpt_transformer.md
examples/linear_model/: linear_model.md
examples/sidecar_demo/: sidecar_demo.md  sidecar_demo.py
python/: README.md  pyproject.toml
python/mathdocs/: __init__.py  __main__.py  cli.py
python/mathrender/: cli.py
scripts/: reinstall-cursor-extension.sh  render_examples.sh
