[workspace]
members = [
    "crates/mathdocs_ast",
    "crates/mathdocs_metadata",
    "crates/mathdocs_ir",
    "crates/mathdocs_latex",
    "crates/mathdocs_markdown",
    "crates/mathdocs_cli",
    "crates/mathdocs_lsp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/mathdocs"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lsp-types = "0.97"
rustpython-parser = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
toml = "0.9"
tower-lsp = "0.20"
url = "2.5"
