[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mathdocs"
version = "0.1.0"
description = "Tiny zero-cost metadata helpers for MathDocs source rendering"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MathDocs contributors" }]

[project.scripts]
mdpy = "mathdocs.cli:main"
render = "mathdocs.cli:render_main"

[tool.hatch.build.targets.wheel]
packages = ["mathdocs"]
