[package]
name = "mathdocs_lsp"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "mathdocs-lsp"
path = "src/main.rs"

[dependencies]
mathdocs_ast = { path = "../mathdocs_ast" }
mathdocs_markdown = { path = "../mathdocs_markdown" }
mathdocs_metadata = { path = "../mathdocs_metadata" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
url.workspace = true
