[package]
name = "mathdocs_markdown"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
mathdocs_ast = { path = "../mathdocs_ast" }
mathdocs_ir = { path = "../mathdocs_ir" }
mathdocs_latex = { path = "../mathdocs_latex" }
mathdocs_metadata = { path = "../mathdocs_metadata" }
serde.workspace = true
toml.workspace = true
