[package]
name = "mathrender_cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "mathrender"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mathrender_ast = { path = "../mathrender_ast" }
mathrender_markdown = { path = "../mathrender_markdown" }
mathrender_metadata = { path = "../mathrender_metadata" }
serde_json.workspace = true
