[package]
name = "mathrender_lsp"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "mathrender-lsp"
path = "src/main.rs"

[dependencies]
mathrender_ast = { path = "../mathrender_ast" }
mathrender_markdown = { path = "../mathrender_markdown" }
mathrender_metadata = { path = "../mathrender_metadata" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
url.workspace = true
